# C-code

./: CLAUDE.md  CMakeLists.txt
week01/part1/: CMakeLists.txt
week01/part2/: CMakeLists.txt  clrmain.cpp
week02/ex01/: CMakeLists.txt  main.cc  week02hello.cc
week02/ex02/: CMakeLists.txt  frame.cc  frame_v2.cc
week02/ex03/: CMakeLists.txt  getname.cc  getname_v2.cc
week02/ex04/: CMakeLists.txt  prime.cc
week02/ex05/: 3_13_5.cc  3_13_6.cpp  CMakeLists.txt
week03/: ex01.cc  ex02.cc  ex03.cc
week04/: ex01.cc  ex02.cc  ex03.cc  ex04.cc  particle.cc  particle.s  prime(1).cc  with_no_virtual.cc
week05/: CMakeLists.txt  ex01.cc  ex02.cc  ex03.cc  ex04.cc
week06/: ex01.cc  ex02.cc
week07/: CMakeLists.txt  dangle.cc  grid.cc  grid_main.cc  tracer.cc  try_unique_ptr.cpp
week07/grid/: CMakeLists.txt  grid.cc  grid.h  grid_main.cc  output.txt  output2.txt
week08/: CMakeLists.txt  copy_and_move2.cc  move_and_copy_try.cc
week08/lab4/: CMakeLists.txt
week08/lab4/cmake/: SetupDependencies.cmake
week08/lab4/src/: CMakeLists.txt  bad_buffer.h  bench_compare.cc  buffer_stage1.h  buffer_stage2.h  output.txt  test_stage1.cc  test_stage2.cc
