set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
project(change_me LANGUAGES CXX VERSION 26.03.01)
add_executable(frame)
target_sources(frame PRIVATE frame.cc)
target_compile_features(frame PUBLIC cxx_std_23)
target_compile_options(frame PUBLIC -Wall -Wextra -Wpedantic)
target_link_libraries(frame PRIVATE stdc++exp)
add_executable(frame_v2)
target_sources(frame_v2 PRIVATE frame_v2.cc)
target_compile_options(frame_v2 PUBLIC -std=c++23)
target_link_libraries(frame_v2 PRIVATE stdc++exp)