set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
project(change_me LANGUAGES CXX VERSION 26.03.01)
add_executable(getname)
target_sources(getname PRIVATE getname.cc)
target_compile_features(getname PUBLIC cxx_std_23)
target_compile_options(getname PUBLIC -Wall -Wextra -Wpedantic)
target_link_libraries(getname PRIVATE stdc++exp)
add_executable(getname_v2)
target_sources(getname_v2 PRIVATE frame_v2.cc)
target_compile_options(getname_v2 PUBLIC -std=c++23)
target_link_libraries(getname_v2 PRIVATE stdc++exp)